--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="DashCountHUD.h" />
     <ClInclude Include="Dungeon2Scene.h" />
     <ClInclude Include="DungeonScene.h" />
+    <ClInclude Include="DustEffect.h" />
     <ClInclude Include="FontObject.h" />
     <ClInclude Include="DashEffect.h" />
     <ClInclude Include="Dungeon1Scene.h" />
@@ -271,6 +272,7 @@
     <ClCompile Include="DashCountHUD.cpp" />
     <ClCompile Include="Dungeon2Scene.cpp" />
     <ClCompile Include="DungeonScene.cpp" />
+    <ClCompile Include="DustEffect.cpp" />
     <ClCompile Include="FontObject.cpp" />
     <ClCompile Include="DashEffect.cpp" />
     <ClCompile Include="Dungeon1Scene.cpp" />
