Dungeon Boss Room Gate Implement

--- a/MyEngine/MyEngine/MyEngine.vcxproj
+++ b/MyEngine/MyEngine/MyEngine.vcxproj
@@ -148,19 +148,19 @@
     <ClInclude Include="BansheeBullet.h" />
     <ClInclude Include="BansheeMissileEffect.h" />
     <ClInclude Include="BatBullet.h" />
+    <ClInclude Include="BelialRoomGate.h" />
     <ClInclude Include="BigGrayIceSkullWarrior.h" />
     <ClInclude Include="BlackSmithNPC.h" />
+    <ClInclude Include="BossRoomGate.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="CheckButtonUI.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="CollisionComponent.h" />
     <ClInclude Include="DashCountHUD.h" />
-    <ClInclude Include="Dungeon2Scene.h" />
     <ClInclude Include="DungeonScene.h" />
     <ClInclude Include="DustEffect.h" />
     <ClInclude Include="FontObject.h" />
     <ClInclude Include="DashEffect.h" />
-    <ClInclude Include="Dungeon1Scene.h" />
     <ClInclude Include="DungeonEatEvent.h" />
     <ClInclude Include="EatState.h" />
     <ClInclude Include="EventObject.h" />
@@ -221,6 +221,7 @@
     <ClInclude Include="MonsterTraceState.h" />
     <ClInclude Include="MouseMgr.h" />
     <ClInclude Include="MultipleMissileEffect.h" />
+    <ClInclude Include="NiflheimRoomGate.h" />
     <ClInclude Include="NPC.h" />
     <ClInclude Include="NPCLineHUD.h" />
     <ClInclude Include="Ovibos.h" />
@@ -275,19 +276,19 @@
     <ClCompile Include="BansheeBullet.cpp" />
     <ClCompile Include="BansheeMissileEffect.cpp" />
     <ClCompile Include="BatBullet.cpp" />
+    <ClCompile Include="BelialRoomGate.cpp" />
     <ClCompile Include="BigGrayIceSkullWarrior.cpp" />
     <ClCompile Include="BlackSmithNPC.cpp" />
+    <ClCompile Include="BossRoomGate.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="CheckButtonUI.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="CollisionComponent.cpp" />
     <ClCompile Include="DashCountHUD.cpp" />
-    <ClCompile Include="Dungeon2Scene.cpp" />
     <ClCompile Include="DungeonScene.cpp" />
     <ClCompile Include="DustEffect.cpp" />
     <ClCompile Include="FontObject.cpp" />
     <ClCompile Include="DashEffect.cpp" />
-    <ClCompile Include="Dungeon1Scene.cpp" />
     <ClCompile Include="DungeonEatEvent.cpp" />
     <ClCompile Include="EatState.cpp" />
     <ClCompile Include="EventObject.cpp" />
@@ -347,6 +348,7 @@
     <ClCompile Include="MonsterTraceState.cpp" />
     <ClCompile Include="MouseMgr.cpp" />
     <ClCompile Include="MultipleMissileEffect.cpp" />
+    <ClCompile Include="NiflheimRoomGate.cpp" />
     <ClCompile Include="NPC.cpp" />
     <ClCompile Include="NPCLineHUD.cpp" />
     <ClCompile Include="Ovibos.cpp" />
